# WindowsAppSDK-Samples

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  Directory.Build.props  Directory.Packages.props  README.md  SamplesCI-All.yml  SamplesCI-AppLifecycle.yml  SamplesCI-BackgroundTask.yml  SamplesCI-CameraCaptureUI.yml  SamplesCI-Composition.yml  SamplesCI-CompositionSampleGallery.yml  SamplesCI-Content.yml  SamplesCI-CustomControl.yml  SamplesCI-CustomControls.yml  SamplesCI-CustomEditControl.yml  SamplesCI-DeploymentManager.yml  SamplesCI-Input.yml  SamplesCI-Insights.yml  SamplesCI-Installer.yml  SamplesCI-Islands.yml  SamplesCI-Mica.yml  SamplesCI-MultiHeadedPackage.yml  SamplesCI-Notifications.yml  SamplesCI-OAuth2Manager.yml  SamplesCI-PhotoEditor.yml  SamplesCI-Rendering.yml  SamplesCI-ResourceManagement.yml  SamplesCI-SelfContainedDeployment.yml  SamplesCI-TextRendering.yml  SamplesCI-Unpackaged.yml  SamplesCI-Widgets.yml  SamplesCI-Windowing.yml  UpdateVersions.cmd  UpdateVersions.ps1  WindowsAppSDK-BuildVSIX.yml  WindowsAppSDK-SamplesCI.yml  (+11 more)
.github/: copilot-instructions.md
.github/instructions/: azure-devops-pipelines.instructions.md  csharp.instructions.md  instructions.instructions.md
.github/prompts/: create-commit-title.prompt.md  create-pr-summary.prompt.md  review-issue.prompt.md  review-pr.prompt.md
.github/workflows/: c-cpp.yml  samples_ci.yml
CoreLifecycle/: README.md
DWriteCore/: README.md
DWriteCore/DWriteCoreGallery/: ChildWindow.cpp  ChildWindow.h  CustomFontCollection.cpp  CustomFontCollection.h  DWriteCoreGallery.sln  DWriteCoreGallery.vcxproj  DWriteCoreGallery.vcxproj.filters  FontCollectionWindow.cpp  FontCollectionWindow.h  FontFaceListWindow.cpp  FontFaceListWindow.h  FontFamilyListWindow.cpp  FontFamilyListWindow.h  Helpers.cpp  Helpers.h  ListWindow.cpp  ListWindow.h  Main.cpp  Main.h  MainWindow.cpp  MainWindow.h  MarkdownWindow.cpp  MarkdownWindow.h  README.md  Resource.h  ResourceFontFileLoader.cpp  ResourceFontFileLoader.h  Scenario_BasicTextLayout.cpp  Scenario_BasicTextLayout.h  Scenario_FontCollection.cpp  Scenario_FontCollection.h  Scenario_OpticalSize.cpp  SplitWindow.cpp  SplitWindow.h  StaticTextWindow.cpp  StaticTextWindow.h  TextRenderer.cpp  TextRenderer.h  packages.config
DWriteCore/DWriteCoreGallery (packaging)/: Package.appxmanifest
HelloWorld/reunioncppdesktopsampleapp/: README.md  ReunionCppDesktopSampleApp.sln  nuget.config
MrtCore/: README.md
MrtCore/console_unpackaged_app/: console_unpackaged_app.cpp  console_unpackaged_app.sln  (+3 more)
Samples/: Build.Common.Cpp.props  Build.Windows.PlatformToolset.props  BuildAllSamples.ps1  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  SampleValidation.Common.psm1  nuget.config
Samples/CMake/: CMakeLists.txt  CMakePresets.json  Configuration.cmake  Launch-PackagedApp.ps1  README.md  Test-AllApps.ps1  nuget.config
Samples/CMake/Metapackage/: CMakeLists.txt  CMakePresets.json
Samples/CMake/Metapackage/PackagedFrameworkDependent/: CMakeLists.txt  main.cpp
Samples/CMake/Metapackage/PackagedSelfContained/: CMakeLists.txt  main.cpp
Samples/CMake/Metapackage/UnpackagedFrameworkDependent/: CMakeLists.txt  main.cpp
Samples/CMake/Metapackage/UnpackagedSelfContained/: CMakeLists.txt  main.cpp
Samples/CMake/MetapackageFrameworkDependent/: CMakeLists.txt  CMakePresets.json  main.cpp
Samples/CMake/PackagedFrameworkDependent/: AppxManifest.xml  CMakeLists.txt  README.md  main.cpp
Samples/CMake/PackagedSelfContained/: AppxManifest.xml  CMakeLists.txt  README.md  main.cpp
Samples/CMake/UnpackagedFrameworkDependent/: CMakeLists.txt  README.md  main.cpp
Samples/CMake/UnpackagedSelfContained/: CMakeLists.txt  README.md  main.cpp
Samples/WindowsAIFoundry/cpp-console-sparse/: .gitignore  AppxManifest.xml  CMakeLists.txt  README.md  app.manifest  formatters.h  install.ps1  main.cpp  vcpkg.json  video_file_pipeline.cpp
Samples/WindowsAIFoundry/cpp-console-sparse/vcpkg_ports/windowsappsdk/: portfile.cmake  usage  vcpkg.json
Samples/WindowsCopilotRuntime/cpp-cmake/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
Samples/WindowsCopilotRuntime/cpp-cmake/vcpkg_ports/webview2/: portfile.cmake  vcpkg.json  webview2-config.cmake
Samples/WindowsCopilotRuntime/cpp-cmake/vcpkg_ports/windowsappsdk/: portfile.cmake  vcpkg.json  windowsappsdk-config.cmake
Samples/WindowsCopilotRuntime/cpp-console-unpackaged/: CMakeLists.txt  CMakePresets.json  README.md  app.manifest  formatters.h  main.cpp  vcpkg.json
Samples/WindowsCopilotRuntime/cpp-console-unpackaged/vcpkg_ports/cppwinrt/: cppwinrt-config.cmake  portfile.cmake  usage  vcpkg-port-config.cmake
Samples/WindowsCopilotRuntime/cpp-console-unpackaged/vcpkg_ports/windowsappsdk/: portfile.cmake  usage  vcpkg.json  windowsappsdk-config.cmake
Samples/WindowsML/cmake/WinMLEpCatalog/: CMakeLists.txt  README.md  build.ps1  main.cpp
Samples/WindowsML/cpp-cmake/: .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Configuration.cmake  b.cmd  dbg-options.txt  g.cmd  go.cmd  go.ps1  gocmd  p.cmd  readme.md
Samples/WindowsML/cpp-cmake/ResNetCommon/: CMakeLists.txt  ResNetModelHelper.cpp  pch.h
Samples/WindowsML/cpp-cmake/ResNetCommon/include/: ResNetModelHelper.hpp
Samples/WindowsML/cpp-cmake/ResNetConsoleDesktop/: CMakeLists.txt  go.ps1  main.cpp
Samples/WindowsML/cpp-cmake/ResNetConsoleDesktop.SelfContained/: CMakeLists.txt  main.cpp  pch.h
Samples/WindowsML/cpp-cmake/WinMLEpCatalog/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
SharedContent/: README.md
Templates/: Directory.Build.props  README.md  WindowsAppSDKSampleVSIX.sln
cpp/: Directory.Build.props
cs-winforms/: WindowsMLWinFormsSample.csproj
cs-winui/: MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  WindowsMLSample.csproj
cs-wpf/: App.xaml  App.xaml.cs  MainWindow.xaml  WindowsMLSampleForWPF.csproj
docs/: pull_request_template.md  roadmap.md  samples-guidelines.md  version-update-process.md
eng/: version.props
(+4601 files in other folders)
